fix: Bottom border not visible for single item in image view

--- a/frappe/public/less/list.less
+++ b/frappe/public/less/list.less
@@ -312,10 +312,6 @@ input.list-check-all, input.list-row-checkbox {
 	.image-view-item:nth-child(4n) {
 		border-right: none;
 	}
-	.image-view-item:nth-last-child(-n + 4):nth-child(4n + 1),
-	.image-view-item:nth-last-child(-n + 4):nth-child(4n + 1) ~ .image-view-item {
-		border-bottom: none;
-	}
 
 	.image-view-header {
 		margin-bottom: 10px;
